@@ -978,10 +978,10 @@ EXPLORE
 #search_text_txt
 Text Search
 
-#search_button0_txt
+#search_button1_txt
 Explore Results
 
-#search_button1_txt
+#search_button_txt
 Discover Results
 
 #search_button2_txt
