@@ -110,16 +110,9 @@
 				<a href="/" title="{mainback_tip_text}"><img src="{flava}dp_logo.60.png" alt="{dportal_logo_alt_text}" width="150" height="60"/>{status}</a>
 			</td>
 			{main_head_tail_settings_search}
-			
 
-<!-- new search in progress - Explore	-->		
-#main_head_search3
-<div class="default head">
-	<table class="head">
-		<tr>
-			<td rowspan="3">
-				<a href="/" title="{mainback_tip_text}"><img src="{flava}dp_logo.60.png" alt="{dportal_logo_alt_text}" width="150" height="60"/>{status}</a>
-			</td>
+
+#main_head_tail_settings_search
 			<td class="settings_toggle">
 				<div class="settings_link_search">
 					<span>Welcome to d-portal </span><span> – helping you explore IATI data</span>
@@ -130,18 +123,6 @@
 					<span><a href="http://d-portal.org/faq.html">FAQ</a></span>
 				</div>
 			</td>
-			</tr>
-		</table>
-	<div class="crumb_wrap">{crumbs}</div>
-</div>
-
-
-#main_head_tail_settings_search
-		<td class="settings_toggle">
-			<div class="settings_link_search">
-				<span>Welcome to d-portal </span><span> – helping you explore IATI data</span>
-			</div>
-		</td>
 		</tr>
 	</table>
 	<div class="crumb_wrap">{crumbs}</div>
@@ -291,7 +272,7 @@
 #main_searchmin
 <div class="default min">
 	<div class="search_cont">
-		<a href="http://d-portal.org/ctrack.html#view=search" class="search search_head">
+		<a href="http://d-portal.org/ctrack.html#view=search" class="search search_title">
 			{search_view_txt}
 		</a><div class="search search_main">
 			<div class="search_query">
@@ -342,7 +323,7 @@
 #main_search
 <div class="default min">
 	<div class="search_cont">
-		<a href="http://d-portal.org/ctrack.html#view=search" class="search search_head">
+		<a href="http://d-portal.org/ctrack.html#view=search" class="search search_title">
 			{search_view_txt}
 		</a><div class="search search_main">
 <div class="search_query">
