@@ -3,6 +3,8 @@ Development Portal (2017-09-03 shi)
 Added donor and sector types to views
 Removed hover titles from lists
 Flex document linksin SAVi
+Move EXPLORE to main landing page
+Update links, layout and styles
 
 
 Development Portal (2017-09-02 shi)
